--- a/index.html
+++ b/index.html
@@ -159,5 +159,7 @@
         </div>
     </div>
 
+    <script src="./js/Calculator.js"></script>
+    <script src="./js/CalcInitialize.js"></script>
 </body>
 </html>
